# Tucil2_13523006

./: CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt  main.cpp
src/ImageCompressor/: ImageCompressor.cpp  ImageCompressor.hpp  Metrics.cpp  Metrics.hpp  Quadtree.cpp  Quadtree.hpp  RunParams.hpp  View.cpp  View.hpp
