cmake_minimum_required(VERSION 3.16...4.0)
project(Tucil2_13523006 VERSION 0.1.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED true)
find_package(PkgConfig REQUIRED)
pkg_check_modules(IMAGEMAGICK REQUIRED Magick++)
add_subdirectory(src)
include_directories(${IMAGEMAGICK_INCLUDE_DIRS})
link_directories(${IMAGEMAGICK_LIBRARY_DIRS})

add_executable(Main src/main.cpp)
add_definitions(-DMAGICKCORE_QUANTUM_DEPTH=8 -DMAGICKCORE_HDRI_ENABLE=0)
target_link_libraries(Main PRIVATE ImageCompressorLib)
target_link_libraries(Main PRIVATE ${IMAGEMAGICK_LIBRARIES})